# Programmatic_PID

./: .pre-commit-config.yaml  AGENTS.md  SPEC.md  dev-requirements.txt  pyproject.toml
.github/workflows/: Jules-Redundant-Issue-Closer.yml  Jules-Redundant-PR-Closer.yml  Verify-Issue-Closure.yml  anti-phantom-merge.yml  ci-standard.yml  lint-workflow-files.yml  local-only-runner-guard.yml  nightly.yml  spec-check.yml
docs/: testing.md
src/programmatic_pid/: dxf_text.py
tests/: conftest.py  test_pytest_config_contract.py
