[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "programmatic-pid"
version = "0.1.0"
description = "A Python framework for generating P&ID from YAML specifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf[draw]>=1.4.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
generate-pid = "programmatic_pid.generator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 60
timeout_method = "thread"
addopts = """
  -ra
  -q
  --tb=short
  --strict-markers
  --strict-config
  --durations=20
  -m "not slow and not live_simulation and not e2e and not requires_network"
"""
markers = [
    "unit: pure logic, fully mocked, < 100 ms wall-clock",
    "integration: cross-module or file-system boundaries, < 5 s",
    "e2e: full-stack smoke tests; not part of the default lane",
    "slow: > 1 s wall-clock; deselect with '-m \"not slow\"'",
    "live_simulation: requires a real engine or long-running simulation",
    "requires_network: needs real outbound network access",
    "requires_gpu: needs GPU acceleration",
    "requires_gl: needs OpenGL or a display server",
    "headless_safe: verified in a headless test environment",
    "serial: must run with xdist disabled",
    "benchmark: deterministic performance coverage",
    "smoke: release-blocking smoke coverage",
]
filterwarnings = []

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["D", "ANN", "C901", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["programmatic_pid"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.coverage.run]
source = ["programmatic_pid"]
