[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "programmatic-pid"
version = "0.1.0"
description = "A Python framework for generating P&ID from YAML specifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf[draw]>=1.4.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
generate-pid = "programmatic_pid.generator:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config --durations=20 -m \"not slow and not live_simulation and not e2e and not requires_network and not heavy\""
markers = [
    "unit: Pure logic, highly isolated, execution in < 100ms",
    "integration: Subsystem boundaries, DBs, I/O, heavy mocking",
    "e2e: Full system boot, real networks, user workflows",
    "slow: marks tests as slow",
    "live_simulation: marks tests as requiring live simulation environment",
    "requires_network: needs real outbound network",
    "heavy: resource-intensive tests",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["D", "ANN", "C901", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["programmatic_pid"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.coverage.run]
source = ["programmatic_pid"]
